# Discounting_Geometry

./: .gitignore  README.md  pyproject.toml
config/: project_config.yaml
docs/: continuation-checklist.md  project-state-summary.md  slurm-script-hierarchy.md  slurm-usage-guide.md  troubleshooting-guide.md
logs/: .gitkeep
neuro-agent/: neuro_agent.py
scripts/: run_all_decoding_for_subject.sh  utils.py
scripts/behavioral/: calculate_discount_rates.py  summarize_behavioral_data.py
scripts/dev/: verify_onsets.py
scripts/group_level/: run_group_glm.py  run_group_mvpa.py  run_group_rsa.py  run_group_statistics.py
scripts/modeling/: run_lss_model.py  run_lss_modeling.py  run_standard_glm.py
scripts/mvpa/: run_decoding_analysis.py
slurm/: get_subject_count.sh  load_python_module.sh  prepare_slurm_environment.sh  submit_all_analyses.sh  submit_all_behavioral.sh  submit_all_decoding.sh  submit_all_group_glms.sh  submit_all_lss_models.sh  submit_all_modeling.sh  submit_all_rsa.sh  submit_all_standard_glms.sh  submit_all_subjects.sh  submit_all_visualizations.sh  submit_behavioral_analysis.sbatch  submit_decoding_analysis.sbatch  submit_glm_array_dynamic.sbatch  submit_glm_array_dynamic.sh  submit_glm_batch.sbatch  submit_group_glm.sbatch  submit_group_glms.sbatch  submit_lss_array_dynamic.sbatch  submit_lss_array_dynamic.sh  submit_lss_batch.sbatch  submit_lss_model.sbatch  submit_lss_modeling.sbatch  submit_rsa_analysis.sbatch  submit_standard_glm.sbatch  submit_visualization.sbatch
tests/: test_behavioral.py  test_modeling.py  test_mvpa.py  test_rsa.py
(+6 files in other folders)
